// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobsMaatooForm snapshots default theme 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: -20px;
  width: calc(100% + 40px);
}

.c3 {
  margin: 20px;
  margin-left: 8.3325%;
  width: calc(66.66% - 40px);
}

.c1 {
  $position: relative;
  margin: 0 auto;
  width: 100%;
  max-width: 1280px;
  padding: 0 20px;
  margin-bottom: 0;
}

.c5 {
  color: #000000;
  font-family: "GeomanistMedium",Arial,sans-serif;
  font-size: 35px;
  line-height: 43px;
  font-weight: normal;
}

.c6 strong {
  font-weight: bold;
}

.c0 {
  background: #F3F3F3;
  padding: 50px 0;
  margin: 60px 0 30px;
}

.c0 a {
  color: #000000;
  -webkit-transition: color 0.25s ease-out;
  transition: color 0.25s ease-out;
}

.c0 a:hover {
  color: #2CC700;
}

.c0 .flexWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .flexWrapper--wrap {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .mauticform-radiogrp-row,
.c0 .mauticform-checkboxgrp-row {
  color: #000000;
  font-family: "GeomanistMedium",Arial,sans-serif;
  font-size: 16px;
  line-height: 23px;
  font-weight: normal;
}

.c0 .mauticform-$position-2 {
  height: 0;
  width: 0;
  overflow: hidden;
}

.c0 .mauticform-radiogrp-row,
.c0 .mauticform-checkboxgrp-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 30%;
}

.c0 .mauticform-radiogrp-row label,
.c0 .mauticform-checkboxgrp-row label {
  display: inline-block;
  cursor: pointer;
  $position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0 0 45px;
  height: 30px;
  margin-bottom: 15px;
}

.c0 .mauticform-radiogrp-row input,
.c0 .mauticform-checkboxgrp-row input {
  $position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.c0 .mauticform-radiogrp-row .customElm,
.c0 .mauticform-checkboxgrp-row .customElm {
  $position: absolute;
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
  background-color: #FFFFFF;
  border: 3px solid #D8D8D8;
}

.c0 .mauticform-radiogrp-row .customElm:after,
.c0 .mauticform-checkboxgrp-row .customElm:after {
  content: '';
  $position: absolute;
  display: none;
  left: 9px;
  top: 2px;
  width: 6px;
  height: 16px;
  border: 2px solid #2CC700;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c0 .mauticform-radiogrp-row input:$checked ~ .customElm:after,
.c0 .mauticform-checkboxgrp-row input:$checked ~ .customElm:after {
  display: block;
}

.c0 .mauticform-radiogrp-row {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .mauticform-radiogrp-row label + label {
  margin-left: 40px;
}

.c0 .mauticform-radiogrp-row .customElm {
  border-radius: 50%;
}

.c0 .mauticform-radiogrp-row .customElm:after {
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 14px;
  height: 14px;
  border: none;
  border-radius: 50%;
  background: #272D35;
}

.c0 .mauticform-label {
  margin: 30px 0 5px;
  display: block;
}

.c0 .checkboxRadio-label {
  margin-bottom: 15px;
}

.c0 .mauticform-input {
  color: #000000;
  font-family: "GeomanistMedium",Arial,sans-serif;
  font-size: 16px;
  line-height: 23px;
  font-weight: normal;
  width: 70%;
  background: #FFFFFF;
  border: none;
  border-bottom: 1px solid #000000;
  padding: 16px 20px;
}

.c0 .inputComment {
  color: #000000;
  font-family: "GeomanistRegular",Arial,sans-serif;
  font-size: 14px;
  line-height: 23px;
  margin-top: 5px;
  width: 70%;
}

.c0 .mtStandard {
  margin-top: 25px;
}

.c0 .mauticform-button {
  $position: relative;
  color: #000000;
  font-family: "GeomanistMedium",Arial,sans-serif;
  -webkit-letter-spacing: 0.34px;
  -moz-letter-spacing: 0.34px;
  -ms-letter-spacing: 0.34px;
  letter-spacing: 0.34px;
  font-size: 16px;
  line-height: 37px;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  color: #FFFFFF;
  background: #2CC700;
  padding: 10px 20px;
  margin-top: 35px;
}

.c0 .mauticform-button > * + * {
  margin-left: 15px;
}

.c0 .mauticform-button:hover {
  color: #FFFFFF;
}

.c0 .mauticform-button:before {
  content: '';
  background: #32e100;
  $position: absolute;
  right: 0;
  top: 0;
  width: 100%;
  height: 100%;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transition: -webkit-transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  -webkit-transition: transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  transition: transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  z-index: 1;
}

.c0 .mauticform-button:hover:before {
  -webkit-transition: -webkit-transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  -webkit-transition: transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  transition: transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

.c0 .mauticform-button > * {
  margin: 0;
  $position: relative;
  z-index: 2;
}

.c0 .mauticform-button > * + * {
  margin-left: 20px;
}

.c0 .mauticform-errormsg {
  display: block;
  color: red;
}

.c0 .mauticform-has-error input,
.c0 .mauticform-has-error textarea {
  color: red;
  border-bottom: 2px solid red;
}

.c0 .mauticform-message:empty,
.c0 .mauticform-error:empty {
  display: none;
}

.c0 .mauticform-message,
.c0 .mauticform-error {
  color: #FFFFFF;
  background: #2CC700;
  padding: 20px;
  margin-top: 25px;
}

.c0 .mauticform-error {
  background: red;
}

.c0 .mauticform-textarea {
  border-bottom: 1px solid #000000;
  font: inherit;
  font-family: 'GeomanistMedium',Arial,sans-serif;
  color: #000000;
  width: 100%;
  padding: 16px 20px;
  background: #fff;
  box-shadow: 0px 0px 0px #fff inset;
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 100px;
}

.c4 {
  margin-bottom: 30px;
}

@media (max-width:1199px) {
  .c3 {
    margin-left: 8.3325%;
    width: calc(66.66% - 40px);
  }
}

@media (max-width:991px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:767px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:575px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:1199px) {
  .c1 {
    max-width: 960px;
  }
}

@media (max-width:991px) {
  .c1 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    max-width: 540px;
  }
}

@media (max-width:767px) {
  .c5 {
    font-size: 20px;
    line-height: 26px;
    font-weight: normal;
  }
}

@media (max-width:767px) {
  .c0 {
    padding: 50px 20px;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-radiogrp-row,
  .c0 .mauticform-checkboxgrp-row {
    font-size: 16px;
    line-height: 23px;
    font-weight: normal;
  }
}

@media (max-width:575px) {
  .c0 .mauticform-radiogrp-row,
  .c0 .mauticform-checkboxgrp-row {
    min-width: 50%;
    display: block;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-input {
    font-size: 16px;
    line-height: 23px;
    font-weight: normal;
  }
}

@media (max-width:991px) {
  .c0 .mauticform-input {
    width: 100%;
  }
}

@media (max-width:767px) {
  .c0 .inputComment {
    font-size: 14px;
    line-height: 23px;
  }
}

@media (max-width:991px) {
  .c0 .inputComment {
    width: 100%;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-button {
    -webkit-letter-spacing: 0.34px;
    -moz-letter-spacing: 0.34px;
    -ms-letter-spacing: 0.34px;
    letter-spacing: 0.34px;
    font-size: 16px;
    line-height: 37px;
    font-weight: normal;
  }
}

<div
  className="c0"
>
  <div
    className="Container-covgtj-0 c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2
          className="c4 c5"
        >
          Bewerbung
        </h2>
        <div
          className="c6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
            <script>
              function handleMauticError() {
                setTimeout(function() {
                  const errorClass = document.getElementsByClassName('mauticform-has-error')[0];
                  if (errorClass) {
                    errorClass.scrollIntoView();
                  }
                }, 250);
              };
            </script>

            <div id=\\"mauticform_wrapper_bewerbung\\" class=\\"mauticform_wrapper\\">
              <form autocomplete=\\"false\\" role=\\"form\\" method=\\"post\\" action=\\"https://cassini.maatoo.io/form/submit?formId=2\\" id=\\"mauticform_bewerbung\\"  data-mautic-form=\\"bewerbung\\" enctype=\\"multipart/form-data\\">
              <div class=\\"mauticform-innerform\\">
                <div class=\\"mauticform-page-wrapper mauticform-page-1\\" data-mautic-form-page=\\"1\\">
                  <div class=\\"personalDetails\\">
                    <div id=\\"mauticform_bewerbung_f_name\\"  data-validate=\\"f_name\\" data-validation-type=\\"text\\" class=\\"mauticform-row mauticform-text mauticform-field-3 mauticform-required\\">
                      <label id=\\"mauticform_label_bewerbung_f_name\\" for=\\"mauticform_input_bewerbung_f_name\\" class=\\"mauticform-label\\">Name*</label>
                      <input id=\\"mauticform_input_bewerbung_f_name\\" name=\\"mauticform[f_name]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"text\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte geben Sie ihren Namen ein.</span>
                    </div>

                    <div id=\\"mauticform_bewerbung_vorname\\"  data-validate=\\"vorname\\" data-validation-type=\\"text\\" class=\\"mauticform-row mauticform-text mauticform-field-4 mauticform-required\\">
                      <label id=\\"mauticform_label_bewerbung_vorname\\" for=\\"mauticform_input_bewerbung_vorname\\" class=\\"mauticform-label\\">Vorname*</label>
                      <input id=\\"mauticform_input_bewerbung_vorname\\" name=\\"mauticform[vorname]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"text\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte geben Sie ihren Vornamen ein.</span>
                    </div>

                    <div id=\\"mauticform_bewerbung_email\\"  data-validate=\\"email\\" data-validation-type=\\"email\\" class=\\"mauticform-row mauticform-email mauticform-field-5 mauticform-required\\">
                      <label id=\\"mauticform_label_bewerbung_email\\" for=\\"mauticform_input_bewerbung_email\\" class=\\"mauticform-label\\">E-Mail*</label>
                      <input id=\\"mauticform_input_bewerbung_email\\" name=\\"mauticform[email]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"email\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte eine gültige E-Mail Adresse angeben</span>
                    </div>

                    <div id=\\"mauticform_bewerbung_telefonnummer\\"  class=\\"mauticform-row mauticform-number mauticform-field-6\\">
                      <label id=\\"mauticform_label_bewerbung_telefonnummer\\" for=\\"mauticform_input_bewerbung_telefonnummer\\" class=\\"mauticform-label\\">Telefonnummer</label>
                      <input id=\\"mauticform_input_bewerbung_telefonnummer\\" name=\\"mauticform[telefonnummer1]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"tel\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\"></span>
                    </div>

                    <div id=\\"mauticform_bewerbung_anhang\\"  data-validate=\\"anhang\\" data-validation-type=\\"file\\" class=\\"mauticform-row mauticform-file mauticform-field-7 mauticform-required\\">
                      <label id=\\"mauticform_label_bewerbung_anhang\\" for=\\"mauticform_input_bewerbung_anhang\\" class=\\"mauticform-label\\">Anhang*</label>
                      <input id=\\"mauticform_input_bewerbung_anhang\\" name=\\"mauticform[anhang]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"file\\" multiple />
                      <div class=\\"inputComment\\">
                      Hinweis: Bitte füge Deine deutschsprachigen Bewerbungsunterlagen inklusive eines Anschreibens an. Erstelle hierfür bitte <strong>eine PDF-Datei (max. 5 MB)</strong>, die alle Unterlagen beinhaltet.
                       Du findest unsere Datenschutzbestimmungen <a href=\\"/datenschutz\\">hier</a>.
                    </div>
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte eine Datei zum Hochladen auswählen.</span>
                    </div>
                  </div>

                  <div id=\\"mauticform_bewerbung_optin\\"  data-validate=\\"optin\\" data-validation-type=\\"checkboxgrp\\" class=\\"mauticform-row mauticform-checkboxgrp mauticform-field-8 mauticform-required mtStandard\\">
                    <div class=\\"mauticform-checkboxgrp-row\\">
                      <label id=\\"mauticform_checkboxgrp_label_optin_true0\\" for=\\"mauticform_checkboxgrp_checkbox_optin_true0\\"  class=\\"mauticform-checkboxgrp-label\\">
                        <input  class=\\"mauticform-checkboxgrp-checkbox\\" name=\\"mauticform[optin][]\\" id=\\"mauticform_checkboxgrp_checkbox_optin_true0\\" type=\\"checkbox\\" $value=\\"true\\" />
                        Ich stimme den Datenschutzbestimmungen zu.
                        Diese findest Du <a href=\\"/datenschutz\\">hier</a>.
                        <div class=\\"customElm\\"></div>
                      </label>
                    </div>
                    <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte den Datenschutzbestimmungen zustimmen.</span>
                  </div>

                  <input id=\\"mauticform_input_bewerbung_bewerbungsid\\" name=\\"mauticform[bewerbungsid]\\" $value=\\"job-for-qs\\" class=\\"mauticform-hidden\\" type=\\"hidden\\">

                  <div id=\\"mauticform_bewerbung_position\\" class=\\"mauticform-row mauticform-text mauticform-$position-2 mauticform-field-8 mauticform-required\\">
                    <label id=\\"mauticform_label_bewerbung_position\\" htmlFor=\\"mauticform_input_bewerbung_position\\" class=\\"mauticform-label\\">Ihre Position*</label>
                    <input id=\\"mauticform_input_bewerbung_position\\" name=\\"mauticform[$position]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"text\\">
                    <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Dieses Feld ist Pflicht.</span>
                  </div>


                  <div id=\\"mauticform_bewerbung_submit\\"  class=\\"mauticform-row mauticform-button-wrapper mauticform-field-9\\" onclick=\\"handleMauticError()\\">
                    <button type=\\"submit\\" name=\\"mauticform[submit]\\" id=\\"mauticform_input_bewerbung_submit\\" name=\\"mauticform[submit]\\" $value=\\"\\" class=\\"mauticform-button btn btn-default\\" $value=\\"1\\">
                      <span>Absenden</span>
                    </button>
                  </div>
                </div>
              </div>
              <input type=\\"hidden\\" name=\\"mauticform[formId]\\" id=\\"mauticform_bewerbung_id\\" $value=\\"2\\">
              <input type=\\"hidden\\" name=\\"mauticform[return]\\" id=\\"mauticform_bewerbung_return\\" $value=\\"\\">
              <input type=\\"hidden\\" name=\\"mauticform[$formName]\\" id=\\"mauticform_bewerbung_name\\" $value=\\"bewerbung\\">
              <div class=\\"mauticform-error\\" id=\\"mauticform_bewerbung_error\\"></div>
              <div class=\\"mauticform-message\\" id=\\"mauticform_bewerbung_message\\"></div>
            </form>
          </div>
          ",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`JobsMaatooForm snapshots second theme 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: -20px;
  width: calc(100% + 40px);
}

.c3 {
  margin: 20px;
  margin-left: 8.3325%;
  width: calc(66.66% - 40px);
}

.c1 {
  $position: relative;
  margin: 0 auto;
  width: 100%;
  max-width: 1280px;
  padding: 0 20px;
  margin-bottom: 0;
}

.c5 {
  color: #000000;
  font-family: "Lora-Bold",serif;
  font-size: 35px;
  line-height: 43px;
  font-weight: 700;
}

.c6 strong {
  font-weight: bold;
}

.c0 {
  background: #F3F3F3;
  padding: 50px 0;
  margin: 60px 0 30px;
}

.c0 a {
  color: #000000;
  -webkit-transition: color 0.25s ease-out;
  transition: color 0.25s ease-out;
}

.c0 a:hover {
  color: #FF8135;
}

.c0 .flexWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .flexWrapper--wrap {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .mauticform-radiogrp-row,
.c0 .mauticform-checkboxgrp-row {
  color: #000000;
  font-family: "Lora-Bold",serif;
  font-size: 16px;
  line-height: 23px;
  font-weight: 700;
}

.c0 .mauticform-$position-2 {
  height: 0;
  width: 0;
  overflow: hidden;
}

.c0 .mauticform-radiogrp-row,
.c0 .mauticform-checkboxgrp-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 30%;
}

.c0 .mauticform-radiogrp-row label,
.c0 .mauticform-checkboxgrp-row label {
  display: inline-block;
  cursor: pointer;
  $position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0 0 45px;
  height: 30px;
  margin-bottom: 15px;
}

.c0 .mauticform-radiogrp-row input,
.c0 .mauticform-checkboxgrp-row input {
  $position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.c0 .mauticform-radiogrp-row .customElm,
.c0 .mauticform-checkboxgrp-row .customElm {
  $position: absolute;
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
  background-color: #FFFFFF;
  border: 3px solid #D8D8D8;
}

.c0 .mauticform-radiogrp-row .customElm:after,
.c0 .mauticform-checkboxgrp-row .customElm:after {
  content: '';
  $position: absolute;
  display: none;
  left: 9px;
  top: 2px;
  width: 6px;
  height: 16px;
  border: 2px solid #FF8135;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c0 .mauticform-radiogrp-row input:$checked ~ .customElm:after,
.c0 .mauticform-checkboxgrp-row input:$checked ~ .customElm:after {
  display: block;
}

.c0 .mauticform-radiogrp-row {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .mauticform-radiogrp-row label + label {
  margin-left: 40px;
}

.c0 .mauticform-radiogrp-row .customElm {
  border-radius: 50%;
}

.c0 .mauticform-radiogrp-row .customElm:after {
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 14px;
  height: 14px;
  border: none;
  border-radius: 50%;
  background: #272D35;
}

.c0 .mauticform-label {
  margin: 30px 0 5px;
  display: block;
}

.c0 .checkboxRadio-label {
  margin-bottom: 15px;
}

.c0 .mauticform-input {
  color: #000000;
  font-family: "Lora-Bold",serif;
  font-size: 16px;
  line-height: 23px;
  font-weight: 700;
  width: 70%;
  background: #FFFFFF;
  border: none;
  border-bottom: 1px solid #000000;
  padding: 16px 20px;
}

.c0 .inputComment {
  color: #000000;
  font-family: "Open Sans",Arial,sans-serif;
  font-size: 14px;
  line-height: 23px;
  margin-top: 5px;
  width: 70%;
}

.c0 .mtStandard {
  margin-top: 25px;
}

.c0 .mauticform-button {
  $position: relative;
  color: #000000;
  font-family: "Lora-Bold",serif;
  -webkit-letter-spacing: 0.34px;
  -moz-letter-spacing: 0.34px;
  -ms-letter-spacing: 0.34px;
  letter-spacing: 0.34px;
  font-size: 16px;
  line-height: 37px;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  color: #FFFFFF;
  background: #FF8135;
  padding: 10px 20px;
  margin-top: 35px;
}

.c0 .mauticform-button > * + * {
  margin-left: 15px;
}

.c0 .mauticform-button:hover {
  color: #FFFFFF;
}

.c0 .mauticform-button:before {
  content: '';
  background: #ff914f;
  $position: absolute;
  right: 0;
  top: 0;
  width: 100%;
  height: 100%;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transition: -webkit-transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  -webkit-transition: transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  transition: transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  z-index: 1;
}

.c0 .mauticform-button:hover:before {
  -webkit-transition: -webkit-transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  -webkit-transition: transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  transition: transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

.c0 .mauticform-button > * {
  margin: 0;
  $position: relative;
  z-index: 2;
}

.c0 .mauticform-button > * + * {
  margin-left: 20px;
}

.c0 .mauticform-errormsg {
  display: block;
  color: red;
}

.c0 .mauticform-has-error input,
.c0 .mauticform-has-error textarea {
  color: red;
  border-bottom: 2px solid red;
}

.c0 .mauticform-message:empty,
.c0 .mauticform-error:empty {
  display: none;
}

.c0 .mauticform-message,
.c0 .mauticform-error {
  color: #FFFFFF;
  background: #FF8135;
  padding: 20px;
  margin-top: 25px;
}

.c0 .mauticform-error {
  background: red;
}

.c0 .mauticform-textarea {
  border-bottom: 1px solid #000000;
  font: inherit;
  font-family: 'GeomanistMedium',Arial,sans-serif;
  color: #000000;
  width: 100%;
  padding: 16px 20px;
  background: #fff;
  box-shadow: 0px 0px 0px #fff inset;
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 100px;
}

.c4 {
  margin-bottom: 30px;
}

@media (max-width:1199px) {
  .c3 {
    margin-left: 8.3325%;
    width: calc(66.66% - 40px);
  }
}

@media (max-width:991px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:767px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:575px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:1199px) {
  .c1 {
    max-width: 960px;
  }
}

@media (max-width:991px) {
  .c1 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    max-width: 540px;
  }
}

@media (max-width:767px) {
  .c5 {
    font-size: 20px;
    line-height: 26px;
    font-weight: 700;
  }
}

@media (max-width:767px) {
  .c0 {
    padding: 50px 20px;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-radiogrp-row,
  .c0 .mauticform-checkboxgrp-row {
    font-size: 16px;
    line-height: 23px;
    font-weight: 700;
  }
}

@media (max-width:575px) {
  .c0 .mauticform-radiogrp-row,
  .c0 .mauticform-checkboxgrp-row {
    min-width: 50%;
    display: block;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-input {
    font-size: 16px;
    line-height: 23px;
    font-weight: 700;
  }
}

@media (max-width:991px) {
  .c0 .mauticform-input {
    width: 100%;
  }
}

@media (max-width:767px) {
  .c0 .inputComment {
    font-size: 14px;
    line-height: 23px;
  }
}

@media (max-width:991px) {
  .c0 .inputComment {
    width: 100%;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-button {
    -webkit-letter-spacing: 0.34px;
    -moz-letter-spacing: 0.34px;
    -ms-letter-spacing: 0.34px;
    letter-spacing: 0.34px;
    font-size: 16px;
    line-height: 37px;
    font-weight: 700;
  }
}

<div
  className="c0"
>
  <div
    className="Container-covgtj-0 c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2
          className="c4 c5"
        >
          Bewerbung
        </h2>
        <div
          className="c6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
            <script>
              function handleMauticError() {
                setTimeout(function() {
                  const errorClass = document.getElementsByClassName('mauticform-has-error')[0];
                  if (errorClass) {
                    errorClass.scrollIntoView();
                  }
                }, 250);
              };
            </script>

            <div id=\\"mauticform_wrapper_scoopitstandalone\\" class=\\"mauticform_wrapper\\">
              <form autocomplete=\\"false\\" role=\\"form\\" method=\\"post\\" action=\\"https://cassini.maatoo.io/form/submit?formId=5\\" id=\\"mauticform_scoopitstandalone\\"  data-mautic-form=\\"scoopitstandalone\\" target=\\"mauticiframe_scoopitstandalone\\" enctype=\\"multipart/form-data\\">
              <div class=\\"mauticform-innerform\\">

                  <div class=\\"personalDetails\\">
                    <div id=\\"mauticform_scoopitstandalone_f_name\\"  data-validate=\\"f_name\\" data-validation-type=\\"text\\" class=\\"mauticform-row mauticform-text mauticform-field-3 mauticform-required\\">
                      <label id=\\"mauticform_label_scoopitstandalone_f_name\\" for=\\"mauticform_input_scoopitstandalone_f_name\\" class=\\"mauticform-label\\">Name*</label>
                      <input id=\\"mauticform_input_scoopitstandalone_f_name\\" name=\\"mauticform[f_name]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"text\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte geben Sie ihren Namen ein.</span>
                    </div>

                    <div id=\\"mauticform_scoopitstandalone_vorname\\"  data-validate=\\"vorname\\" data-validation-type=\\"text\\" class=\\"mauticform-row mauticform-text mauticform-field-4 mauticform-required\\">
                      <label id=\\"mauticform_label_scoopitstandalone_vorname\\" for=\\"mauticform_input_scoopitstandalone_vorname\\" class=\\"mauticform-label\\">Vorname*</label>
                      <input id=\\"mauticform_input_scoopitstandalone_vorname\\" name=\\"mauticform[vorname]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"text\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte geben Sie ihren Vornamen ein.</span>
                    </div>

                    <div id=\\"mauticform_scoopitstandalone_email\\"  data-validate=\\"email\\" data-validation-type=\\"email\\" class=\\"mauticform-row mauticform-email mauticform-field-5 mauticform-required\\">
                      <label id=\\"mauticform_label_scoopitstandalone_email\\" for=\\"mauticform_input_scoopitstandalone_email\\" class=\\"mauticform-label\\">E-Mail*</label>
                      <input id=\\"mauticform_input_scoopitstandalone_email\\" name=\\"mauticform[email]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"email\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte eine gültige E-Mail Adresse angeben</span>
                    </div>

                    <div id=\\"mauticform_scoopitstandalone_telefonnummer\\"  class=\\"mauticform-row mauticform-number mauticform-field-6\\">
                      <label id=\\"mauticform_label_scoopitstandalone_telefonnummer\\" for=\\"mauticform_input_scoopitstandalone_telefonnummer\\" class=\\"mauticform-label\\">Telefonnummer</label>
                      <input id=\\"mauticform_input_scoopitstandalone_telefonnummer\\" name=\\"mauticform[telefonnummer1]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"tel\\" />
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\"></span>
                    </div>

                    <div id=\\"mauticform_scoopitstandalone_anhang\\"  data-validate=\\"anhang\\" data-validation-type=\\"file\\" class=\\"mauticform-row mauticform-file mauticform-field-7 mauticform-required\\">
                      <label id=\\"mauticform_label_scoopitstandalone_anhang\\" for=\\"mauticform_input_scoopitstandalone_anhang\\" class=\\"mauticform-label\\">Anhang*</label>
                      <input id=\\"mauticform_input_scoopitstandalone_anhang\\" name=\\"mauticform[anhang]\\" $value=\\"\\" class=\\"mauticform-input\\" type=\\"file\\" multiple />
                      <div class=\\"inputComment\\">
                        Hinweis: Bitte fügen Sie Ihre deutschsprachigen Bewerbungsunterlagen an.
                         Erstellen Sie hierfür bitte <strong>eine PDF-Datei (max. 5 MB)</strong>, die alle Unterlagen beinhaltet.
                         Sie finden unsere Datenschutzbestimmungen <a href=\\"/datenschutz\\">hier</a>.
                      </div>
                      <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte eine Datei zum Hochladen auswählen.</span>
                    </div>
                  </div>

                  <div id=\\"mauticform_scoopitstandalone_optin\\"  data-validate=\\"optin\\" data-validation-type=\\"checkboxgrp\\" class=\\"mauticform-row mauticform-checkboxgrp mauticform-field-8 mauticform-required mtStandard\\">
                    <div class=\\"mauticform-checkboxgrp-row\\">
                      <label id=\\"mauticform_checkboxgrp_label_optin_true0\\" for=\\"mauticform_checkboxgrp_checkbox_optin_true0\\"  class=\\"mauticform-checkboxgrp-label\\">
                        <input  class=\\"mauticform-checkboxgrp-checkbox\\" name=\\"mauticform[optin][]\\" id=\\"mauticform_checkboxgrp_checkbox_optin_true0\\" type=\\"checkbox\\" $value=\\"true\\" />
                        Ich stimme den Datenschutzbestimmungen zu.
                        Diese finden Sie <a href=\\"/datenschutz\\">hier</a>.
                        <div class=\\"customElm\\"></div>
                      </label>
                    </div>
                    <span class=\\"mauticform-errormsg\\" style=\\"display: none;\\">Bitte den Datenschutzbestimmungen zustimmen.</span>
                  </div>

                  <input id=\\"mauticform_input_scoopitstandalone_bewerbungsid\\" name=\\"mauticform[bewerbungsid]\\" $value=\\"job-for-qs\\" class=\\"mauticform-hidden\\" type=\\"hidden\\">

                  <div id=\\"mauticform_scoopitstandalone_submit\\"  class=\\"mauticform-row mauticform-button-wrapper mauticform-field-9\\" onclick=\\"handleMauticError()\\">
                    <button type=\\"submit\\" name=\\"mauticform[submit]\\" id=\\"mauticform_input_scoopitstandalone_submit\\" name=\\"mauticform[submit]\\" $value=\\"\\" class=\\"mauticform-button btn btn-default\\" $value=\\"1\\">
                      <span>Absenden</span>
                    </button>
                  </div>
                </div>
              <input type=\\"hidden\\" name=\\"mauticform[formId]\\" id=\\"mauticform_scoopitstandalone_id\\" $value=\\"5\\">
              <input type=\\"hidden\\" name=\\"mauticform[return]\\" id=\\"mauticform_scoopitstandalone_return\\" $value=\\"\\">
              <input type=\\"hidden\\" name=\\"mauticform[$formName]\\" id=\\"mauticform_scoopitstandalone_name\\" $value=\\"scoopitstandalone\\">
              <div class=\\"mauticform-error\\" id=\\"mauticform_scoopitstandalone_error\\"></div>
              <div class=\\"mauticform-message\\" id=\\"mauticform_scoopitstandalone_message\\"></div>
            </form>
          </div>
          ",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`JobsMaatooForm snapshots third theme 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: -20px;
  width: calc(100% + 40px);
}

.c3 {
  margin: 20px;
  margin-left: 8.3325%;
  width: calc(66.66% - 40px);
}

.c1 {
  $position: relative;
  margin: 0 auto;
  width: 100%;
  max-width: 1280px;
  padding: 0 20px;
  margin-bottom: 0;
}

.c5 {
  color: #000000;
  font-family: "Lora-Bold",serif;
  font-size: 35px;
  line-height: 43px;
  font-weight: 700;
}

.c0 {
  background: #F3F3F3;
  padding: 50px 0;
  margin: 60px 0 30px;
}

.c0 a {
  color: #000000;
  -webkit-transition: color 0.25s ease-out;
  transition: color 0.25s ease-out;
}

.c0 a:hover {
  color: #FF8135;
}

.c0 .flexWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .flexWrapper--wrap {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .mauticform-radiogrp-row,
.c0 .mauticform-checkboxgrp-row {
  color: #000000;
  font-family: "Lora-Bold",serif;
  font-size: 16px;
  line-height: 23px;
  font-weight: 700;
}

.c0 .mauticform-$position-2 {
  height: 0;
  width: 0;
  overflow: hidden;
}

.c0 .mauticform-radiogrp-row,
.c0 .mauticform-checkboxgrp-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 30%;
}

.c0 .mauticform-radiogrp-row label,
.c0 .mauticform-checkboxgrp-row label {
  display: inline-block;
  cursor: pointer;
  $position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0 0 45px;
  height: 30px;
  margin-bottom: 15px;
}

.c0 .mauticform-radiogrp-row input,
.c0 .mauticform-checkboxgrp-row input {
  $position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.c0 .mauticform-radiogrp-row .customElm,
.c0 .mauticform-checkboxgrp-row .customElm {
  $position: absolute;
  top: 0;
  left: 0;
  height: 30px;
  width: 30px;
  background-color: #FFFFFF;
  border: 3px solid #D8D8D8;
}

.c0 .mauticform-radiogrp-row .customElm:after,
.c0 .mauticform-checkboxgrp-row .customElm:after {
  content: '';
  $position: absolute;
  display: none;
  left: 9px;
  top: 2px;
  width: 6px;
  height: 16px;
  border: 2px solid #FF8135;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c0 .mauticform-radiogrp-row input:$checked ~ .customElm:after,
.c0 .mauticform-checkboxgrp-row input:$checked ~ .customElm:after {
  display: block;
}

.c0 .mauticform-radiogrp-row {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .mauticform-radiogrp-row label + label {
  margin-left: 40px;
}

.c0 .mauticform-radiogrp-row .customElm {
  border-radius: 50%;
}

.c0 .mauticform-radiogrp-row .customElm:after {
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 14px;
  height: 14px;
  border: none;
  border-radius: 50%;
  background: #272D35;
}

.c0 .mauticform-label {
  margin: 30px 0 5px;
  display: block;
}

.c0 .checkboxRadio-label {
  margin-bottom: 15px;
}

.c0 .mauticform-input {
  color: #000000;
  font-family: "Lora-Bold",serif;
  font-size: 16px;
  line-height: 23px;
  font-weight: 700;
  width: 70%;
  background: #FFFFFF;
  border: none;
  border-bottom: 1px solid #000000;
  padding: 16px 20px;
}

.c0 .inputComment {
  color: #000000;
  font-family: "Open Sans",Arial,sans-serif;
  font-size: 14px;
  line-height: 23px;
  margin-top: 5px;
  width: 70%;
}

.c0 .mtStandard {
  margin-top: 25px;
}

.c0 .mauticform-button {
  $position: relative;
  color: #000000;
  font-family: "Lora-Bold",serif;
  -webkit-letter-spacing: 0.34px;
  -moz-letter-spacing: 0.34px;
  -ms-letter-spacing: 0.34px;
  letter-spacing: 0.34px;
  font-size: 16px;
  line-height: 37px;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  color: #FFFFFF;
  background: #FF8135;
  padding: 10px 20px;
  margin-top: 35px;
}

.c0 .mauticform-button > * + * {
  margin-left: 15px;
}

.c0 .mauticform-button:hover {
  color: #FFFFFF;
}

.c0 .mauticform-button:before {
  content: '';
  background: #ff914f;
  $position: absolute;
  right: 0;
  top: 0;
  width: 100%;
  height: 100%;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transition: -webkit-transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  -webkit-transition: transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  transition: transform .15s cubic-bezier(.45,.05,.3,.95) .15s;
  z-index: 1;
}

.c0 .mauticform-button:hover:before {
  -webkit-transition: -webkit-transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  -webkit-transition: transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  transition: transform .15s cubic-bezier(.45,.05,.3,.95) 0s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

.c0 .mauticform-button > * {
  margin: 0;
  $position: relative;
  z-index: 2;
}

.c0 .mauticform-button > * + * {
  margin-left: 20px;
}

.c0 .mauticform-errormsg {
  display: block;
  color: red;
}

.c0 .mauticform-has-error input,
.c0 .mauticform-has-error textarea {
  color: red;
  border-bottom: 2px solid red;
}

.c0 .mauticform-message:empty,
.c0 .mauticform-error:empty {
  display: none;
}

.c0 .mauticform-message,
.c0 .mauticform-error {
  color: #FFFFFF;
  background: #FF8135;
  padding: 20px;
  margin-top: 25px;
}

.c0 .mauticform-error {
  background: red;
}

.c0 .mauticform-textarea {
  border-bottom: 1px solid #000000;
  font: inherit;
  font-family: 'GeomanistMedium',Arial,sans-serif;
  color: #000000;
  width: 100%;
  padding: 16px 20px;
  background: #fff;
  box-shadow: 0px 0px 0px #fff inset;
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 100px;
}

.c4 {
  margin-bottom: 30px;
}

@media (max-width:1199px) {
  .c3 {
    margin-left: 8.3325%;
    width: calc(66.66% - 40px);
  }
}

@media (max-width:991px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:767px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:575px) {
  .c3 {
    margin-left: 20px;
    width: calc(99.99% - 40px);
  }
}

@media (max-width:1199px) {
  .c1 {
    max-width: 960px;
  }
}

@media (max-width:991px) {
  .c1 {
    max-width: 720px;
  }
}

@media (max-width:767px) {
  .c1 {
    max-width: 540px;
  }
}

@media (max-width:767px) {
  .c5 {
    font-size: 20px;
    line-height: 26px;
    font-weight: 700;
  }
}

@media (max-width:767px) {
  .c0 {
    padding: 50px 20px;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-radiogrp-row,
  .c0 .mauticform-checkboxgrp-row {
    font-size: 16px;
    line-height: 23px;
    font-weight: 700;
  }
}

@media (max-width:575px) {
  .c0 .mauticform-radiogrp-row,
  .c0 .mauticform-checkboxgrp-row {
    min-width: 50%;
    display: block;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-input {
    font-size: 16px;
    line-height: 23px;
    font-weight: 700;
  }
}

@media (max-width:991px) {
  .c0 .mauticform-input {
    width: 100%;
  }
}

@media (max-width:767px) {
  .c0 .inputComment {
    font-size: 14px;
    line-height: 23px;
  }
}

@media (max-width:991px) {
  .c0 .inputComment {
    width: 100%;
  }
}

@media (max-width:767px) {
  .c0 .mauticform-button {
    -webkit-letter-spacing: 0.34px;
    -moz-letter-spacing: 0.34px;
    -ms-letter-spacing: 0.34px;
    letter-spacing: 0.34px;
    font-size: 16px;
    line-height: 37px;
    font-weight: 700;
  }
}

<div
  className="c0"
>
  <div
    className="Container-covgtj-0 c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2
          className="c4 c5"
        >
          Bewerbung
        </h2>
      </div>
    </div>
  </div>
</div>
`;
